# bmp-rotation

./: .gitignore  README.md
solution/: CMakeLists.txt
solution/include/: generators.h  image.h  imageOP.h  picTransformer.h
solution/src/: generators.c  imageOP.c  main.c  picTransformer.c
